--- a/deployment/app_code/job/driver_template.yaml
+++ b/deployment/app_code/job/driver_template.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Pod
 spec:
+  restartPolicy: Always
   nodeSelector:
     eks.amazonaws.com/capacityType: ON_DEMAND
-  restartPolicy: OnFailure
